2005-05-17  Benjamin Otte <in7y118@public.uni-hamburg.de>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* gobject/gobjectmodule.c:
	* gobject/pygobject-private.h:
	* gobject/pygobject.h:
	* gobject/pygtype.c: (pyg_closure_marshal),
	(pyg_closure_set_exception_handler): Adds exception handling
	support to closures, fixes #304357

2005-05-17  Johan Dahlin  <jdahlin@async.com.br>

	* configure.in: Bump version to 2.7.0

	* pango-types.defs (EllipsizeMode): Remove commas

	* pango.defs (get_font_description, get_ellipsize, set_ellipsize): 
	Add

2005-05-17  Johan Dahlin  <jdahlin@async.com.br>

	* ChangeLog.pre-2-6: Rename old ChangeLog
