@@ -2,6 +2,14 @@
 
 	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
 
+	* gobject/gobjectmodule.c: (pyg_register_class_init),
+	(pyg_run_class_init): Allow multiple calls to 
+	pyg_register_class_init, fixes #304353
+
+2005-05-17  Benjamin Otte <in7y118@public.uni-hamburg.de>
+
+	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
+
 	* gobject/gobjectmodule.c:
 	* gobject/pygobject-private.h:
 	* gobject/pygobject.h:
